WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87968
[BlackBerry] Crash when destroying WebOverlay with active WebOverlayOverride
https://bugs.webkit.org/show_bug.cgi?id=87968
Summary
[BlackBerry] Crash when destroying WebOverlay with active WebOverlayOverride
Arvid Nilsson
Reported
2012-05-31 06:25:11 PDT
The override object is using a compositing thread WebOverlayPrivate object with no client because the layer doesn't delegate drawing to the WebOverlayPrivate, it's only used to modify the override properties on the underlying compositing thread layer.
Attachments
Patch
(3.97 KB, patch)
2012-05-31 06:30 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-05-31 06:30:12 PDT
Created
attachment 145077
[details]
Patch
Rob Buis
Comment 2
2012-05-31 06:51:02 PDT
Comment on
attachment 145077
[details]
Patch Looks good.
WebKit Review Bot
Comment 3
2012-05-31 11:09:50 PDT
Comment on
attachment 145077
[details]
Patch Clearing flags on attachment: 145077 Committed
r119126
: <
http://trac.webkit.org/changeset/119126
>
WebKit Review Bot
Comment 4
2012-05-31 11:09:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug