[BlackBerry] Crash when destroying WebOverlay with active WebOverlayOverride https://bugs.webkit.org/show_bug.cgi?id=87968

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-05-31
Reviewed by Rob Buis.

The override object is using a compositing thread WebOverlayPrivate
object with no client because the layer doesn't delegate drawing to the
WebOverlayPrivate, it's only used to modify the override properties on
the underlying compositing thread layer.

Since the m_layerCompositingThreadClient is optional, we have to add
null checks.

* Api/WebOverlay.cpp:
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::~WebOverlayPrivateCompositingThread):
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::setClient):
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::setContentsToImage):
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::setContentsToColor):
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::setDrawsContent):
(BlackBerry::WebKit::WebOverlayPrivateCompositingThread::invalidate):

Canonical link: https://commits.webkit.org/105823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119126 268f45cc-cd09-0410-ab3c-d52691b4dbfc